--- a/index.html
+++ b/index.html
@@ -45,24 +45,24 @@
                 <div class="box flex">
                   <div class="one flex">
                     <div class="one_img flex">
-                      <img src="./images/android-img.svg" alt="" />
+                      <img src="./images/web-technologies.png" alt="" />
                       <span>Web Development</span>
                     </div>
                     <div class="one_img flex">
-                      <img src="./images/android-img.svg" alt="" />
+                      <img src="./images/appdev.png" alt="" />
                       <span>App Development</span>
                     </div>
                     <div class="one_img flex">
-                      <img src="./images/android-img.svg" alt="" />
-                      <span>Web Development</span>
+                      <img src="./images/digital-marketing.png" alt="" />
+                      <span>Digital Marketing</span>
                     </div>
                     <div class="one_img flex">
-                      <img src="./images/android-img.svg" alt="" />
-                      <span>Web Development</span>
+                      <img src="./images/digital-marketing.png" alt="" />
+                      <span>Professional Training</span>
                     </div>
                     <div class="one_img flex">
-                      <img src="./images/android-img.svg" alt="" />
-                      <span>Web Development</span>
+                      <img src="./images/cyber-security-1.png" alt="" />
+                      <span>Cyber Security</span>
                     </div>
                   </div>
                   <div class="two">
@@ -120,13 +120,13 @@
     <section class="section_one flex container">
      <div class="box_one flex">
       <div class="card flex">
-        <img src="./images/android-img.svg" alt="">
+        <img src="./images/1.svg" alt="">
         <h1>Verified & Reliable Content</h1>
         <p>The entire content on the site is verified by pro developers and tech freaks.</p>
       </div>
 
       <div class="card flex">
-        <img src="./images/android-img.svg" alt="">
+        <img src="./images/2.svg" alt="">
         <h1>Verified & Reliable Content</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea dolore atque perferendis at placeat aperiam debitis, perspiciatis labore odit consectetur dolorem sint soluta laborum repellendus quo officia maxime et sequi?</p>
       </div>
@@ -134,13 +134,18 @@
 
      <div class="box_two flex">
       <div class="card flex">
-        <img src="./images/android-img.svg" alt="">
+        <img src="./images/3.svg" alt="">
         <h1>Verified & Reliable Content</h1>
         <p>The entire content on the site is verified by pro developers and tech freaks.</p>
       </div>
      </div>
 
-    
+     <div class="box_there flex">
+      <h4>Our Unique Approach</h4>
+      <h2>Why Apna Coder?</h2>
+      <p>Learning programming and technical things can be complex. We are here to make it easy with simple and interactive tutorials.</p>
+      <button class="btn_now">Get Started Now</button>
+     </div>
     </section>
 
     <!-- Section Coding End -->
