--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <!-- Home Coding Start -->
     
-    <section class="home container">
+    <section class="home container" id="home">
         <div class="home_bar">
             <div class="logo_pro flex">
                 <img src="./images/python-img.svg" alt="">
@@ -109,8 +109,13 @@
                 <img src="./images/apple-img.svg" alt="">
                 <img src="./images/android-img.svg" alt="">
             </div>
-
            </div>
+        </div>
+
+        <div class="icon_arrow" id="home">
+          <a href="#">
+            <img src="./images/arrow.png" alt="">
+          </a>
         </div>
     </section>
 
@@ -202,8 +207,10 @@
             <img src="./images/arrow_forward.png" alt="">
           </div>
         </div>
-        
       </div>
+
+      <button class="btn_now">View All Tutorials</button>
+
     </section>
 
     <!-- Section Web Dev Coding Start -->
@@ -327,7 +334,6 @@
           <span>Ethical Hacking Quiz</span>
         </div>
       </div>
-
     </div> 
 
     <!-- Section Challenge Coding End -->
