--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
 
     <!-- Section Create Coding Start -->
     
-    <section class=" container flex">
+    <section class="container">
       <div class="create_bar flex">
         <h2>Create your free account now on Tutorials Freak and unlock the entire content!</h2>
         <p>With an account, you get access to premium content and courses at no cost.</p>
@@ -446,6 +446,49 @@
         <button class="btn_now">Start Learning!</button>
       </div>
       <img src="./images/setup-layer.webp" alt="">
+      </div>
+
+      <div class="mobile_bar flex">
+        <div class="text_mobile flex">
+          <h2>Get Apna Coder Mobile App to Learm on The Go!</h2>
+          <p>Download the app now to learn and practice hassle-free</p>
+          <img src="./images/play-store.png" alt="">
+        </div>
+        <img src="./images/mobile.png" alt="">
+      </div>
+
+      <div class="card_create flex">
+        <div class="card_two flex">
+          <img src="./images/283eae7c-8974-49f2-a0a5-e0ac4c0e9215-1647338853.png" alt="">
+          <h3>Web Development</h3>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam corrupti incidunt, itaque sequi error rem!</p>
+
+          <button>Get App</button>
+        </div>
+
+        <div class="card_two flex">
+          <img src="./images/283eae7c-8974-49f2-a0a5-e0ac4c0e9215-1647338853.png" alt="">
+          <h3>Web Development</h3>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam corrupti incidunt, itaque sequi error rem!</p>
+
+          <button>Get App</button>
+        </div>
+
+        <div class="card_two flex">
+          <img src="./images/283eae7c-8974-49f2-a0a5-e0ac4c0e9215-1647338853.png" alt="">
+          <h3>Web Development</h3>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam corrupti incidunt, itaque sequi error rem!</p>
+
+          <button>Get App</button>
+        </div>
+
+        <div class="card_two flex">
+          <img src="./images/283eae7c-8974-49f2-a0a5-e0ac4c0e9215-1647338853.png" alt="">
+          <h3>Web Development</h3>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam corrupti incidunt, itaque sequi error rem!</p>
+
+          <button>Get App</button>
+        </div>
       </div>
     </section>
     
